# template-service

./: .gitignore  AGENTS.md  README.md  celery_app.py  main.py  paths.py  pyproject.toml
app/: __init__.py  dependencies.py  middleware.py  mlflow_registry.py  state.py  tasks.py
app/routes/: __init__.py  images.py  inference.py  models.py  registration.py  training.py
app/schemas/: inference.py
examples/: registration_client.py
models/: __init__.py  base_models.py  model_cache.py  model_registry.py  register_models.py
util/: image_cache.py  image_loading.py
