[project]
name = "coral-template-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "iquana-toolbox",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "flower>=2.0.0",
    "mlflow>=2.10.0",
    "celery-types>=0.26.0",
]

[tool.uv.sources]
iquana-toolbox = { git = "https://github.com/Iquana-tool/iquana-toolbox.git" }
